<resources>
    <string name="app_name">Feels</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_library">Library</string>

    <string name="downloading_title">Downloading</string>
    <string name="downloading_empty">Nothing being downloaded</string>

    <string name="recently_played">Recently played</string>
    <string name="recommendations">Recommendations</string>

    <string name="nothing_to_show_yet">Nothing to show yet</string>>

    <string name="search_song">Search song</string>
    <string name="genre_1">Pop</string>
    <string name="genre_2">Hip hop</string>
    <string name="genre_3">Rock</string>
    <string name="genre_4">Blues</string>
    <string name="genre_5">Electronic</string>
    <string name="genre_6">Reggae</string>
    <string name="genre_7">Country</string>
    <string name="genre_8">Funk</string>
    <string name="genre_9">Gospel</string>
    <string name="genre_10">Jazz</string>
    <string name="genre_11">Disco</string>
    <string name="genre_12">Classical</string>
    <string name="genre_13">Sertanejo</string>
    <string name="genre_14">Samba</string>
    <string name="genre_15">Pagode</string>
    <string name="genre_16">K-pop</string>
    <string name="genre_17">J-pop</string>
    <string name="genre_18">C-Pop</string>

    <string name="your_library">Your library</string>
    <string name="all_songs">All songs</string>
    <string name="recently_added">Recently added</string>
    <string name="playlist_create">Create playlist</string>
    <string name="playlist_name">New playlist name</string>
    <string name="cancel_playlist_create">Cancel</string>
    <string name="create_playlist">Create</string>
    <string name="delete_playlist">Are you sure you want to delete this playlist?</string>
    <string name="playlist_info">{playlist} | {amount} songs</string>
    <string name="songs_info">{amount} songs</string>
    <string name="cancel_delete">Cancel</string>
    <string name="delete_playlist_confirm">Delete</string>

    <string name="songs_library_name">All songs</string>
    <string name="songs_add_selection">Select the tracks you would like to add</string>
    <string name="songs_add_done">Add</string>
    <string name="songs_add_cancel">Cancel</string>
    <string name="songs_empty">You have not downloaded new songs yet</string>

    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_from_playlist">Remove from this playlist</string>
    <string name="song_delete">Delete song</string>
    <string name="playlists_empty">You have not created any playlist yet</string>
</resources>