<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/dark_gray_secondary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/_8sdp">

    <TextView
        android:id="@+id/playlistCreateDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/playlist_create"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_23sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/playlistCreateDialogPlaylistEditText"
        android:layout_width="@dimen/_231sdp"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginTop="@dimen/_19sdp"
        android:backgroundTint="@color/purple_primary"
        android:ems="10"
        android:inputType="text"
        android:imeOptions="actionSend"
        android:hint="@string/playlist_name"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:drawablePadding="@dimen/_11sdp"
        app:layout_constraintStart_toStartOf="@+id/playlistCreateDialogTitle"
        app:layout_constraintTop_toBottomOf="@+id/playlistCreateDialogTitle" />

    <Button
        android:id="@+id/playlistCreateDialogCreateButton"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_38sdp"
        android:background="@drawable/playlist_create_dialog_button_style"
        android:text="@string/create_playlist"
        android:textColor="@color/light_gray_plus"
        app:layout_constraintEnd_toEndOf="@+id/playlistCreateDialogPlaylistEditText"
        app:layout_constraintTop_toBottomOf="@+id/playlistCreateDialogPlaylistEditText" />

    <Button
        android:id="@+id/playlistCreateDialogCancelButton"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_38sdp"
        android:background="@drawable/playlist_create_dialog_button_style"
        android:text="@string/cancel_playlist_create"
        android:textColor="@color/light_gray_plus"
        app:layout_constraintStart_toStartOf="@+id/playlistCreateDialogPlaylistEditText"
        app:layout_constraintTop_toBottomOf="@+id/playlistCreateDialogPlaylistEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>